<resources>
    <string name="app_name">Resume App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="image_of_sultan">Image of sultan</string>
    <string name="portfolio">portfolio</string>
    <string name="Name">Abdulsalam Sultan</string>
    <string name="introduction">Mobile Application Developer \n Student of Lagos State Polytechnic</string>
    <string name="date">November, 3rd 2022</string>
    <string name="address">Lagos, Nigeria</string>
    <string name="number">08133427487</string>
    <string name="email_address">salamsultan09@gmail.com</string>
    <string name="experience">Experience</string>
    <string name="background">Background</string>
    <string name="interest">Interest</string>
    <string name="todo">TODO</string>
    <string name="calendar_icon">calendar icon</string>
    <string name="git_username">www.github.com/techsultann</string>
    <string name="about_me">Hello, i am sultan, a student computer engineering \n at Lagos State Polytechnic. I am currently a Mobile developer (kotlin) intern at HNGi9</string>
    <string name="work_experience">Work Experience</string>
    <string name="hng">HNG</string>
    <string name="mobile_developer_intern">Mobile Developer Intern</string>
    <string name="_2022_present">2022 - Present</string>
    <string name="education">Education</string>
    <string name="computer_engineering">Computer Engineering</string>
    <string name="_2021_2023">2021 - 2023</string>
    <string name="hng_internship">HNG Internship</string>
    <string name="skills">Skills</string>
    <string name="google_skills">Google Digital Skills Fot Africa</string>
    <string name="digital_marketer">Digital Marketer</string>
    <string name="settings">Settings</string>
</resources>